--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,42 @@
-$font-small: 14px;
+$font-xxs: 12px;
+$font-xs: 14px;
+$font-small: 18px;
 $font-medium: 1.25rem;
-$point-sm: 480px;
-$poin-lg: 767px;
+$font-lg: 30px;
 $shadow-text: -1px 0px 0 #d1d1d1;
-$background-button: #5c636a;
-$color: #21252994;
-$padding-button: 10px 50px 10px 50px;
-$height: (l:500px, m: 400px, s: 300px , xs: 200px);
+$line-height: 2rem;
+
+
+
+
+$box-shadow: #48494a5c;
+$borderN: none;
+
+
+
+
 $grey: #bdbdbdc2;
+$color: #21252994;
+$pink: #e69699;
+$white: #fff;
+$opacity: #181d1c;
+
+
+
+$point-xs: 480px;
+$point-sm: 576px;
+$point-medium: 767px;
+$point-lg: 992px;
+$point-xl: 1200px;
+$point-xxl: 1400px;
+
+
+
+$background-button: #5c636a;
+$padding-button: 10px 50px 10px 50px;
+
+
+$height: (l:500px, m: 400px, s: 300px , xs: 200px);
+
+
+
